--- a/flask_nginx/flask/app.ini
+++ b/flask_nginx/flask/app.ini
@@ -13,6 +13,9 @@ callable = app
 
 master = true
 
+; Specify the number of workers
+workers = 2
+
 ; We use the port 5000 which we will
 ; then expose on our Dockerfile
 socket = 0.0.0.0:5000
