editing formatting of hello world page

--- a/flask_nginx/docker-compose.yml
+++ b/flask_nginx/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: ./flask
       dockerfile: Dockerfile-flask
     environment: 
-    - MY_ENV_VAR="hello beautiful environment!"
+    - MY_ENV_VAR="Hello beautiful environment!"
 
   nginx:
     image: webapp-nginx
