--- a/example_microservices/spring_demo/pom.xml
+++ b/example_microservices/spring_demo/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<flyway.version>6.1.4</flyway.version>
 	</properties>
 
 	<dependencies>
@@ -35,6 +36,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>${flyway.version}</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -74,7 +82,7 @@
 			<plugin>
 				<groupId>org.flywaydb</groupId>
 				<artifactId>flyway-maven-plugin</artifactId>
-				<version>6.1.3</version>
+				<version>${flyway.version}</version>
 			</plugin>
 		</plugins>
 	</build>
