--- a/example_microservices/spring_demo/src/main/resources/application.properties
+++ b/example_microservices/spring_demo/src/main/resources/application.properties
@@ -2,11 +2,16 @@
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
-## PostgreSQL
+## configure posrgres database connection details
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 
-#drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+## configure hibernate details
+spring.jpa.hibernate.ddl-auto=none
+
+## configure flyway details
+spring.flyway.enabled=true
+spring.flyway.clean-on-validation-error=true
+
 
