refactoring to use spring webflux reactive programming model

--- a/example_microservices/spring_demo/src/main/resources/application.properties
+++ b/example_microservices/spring_demo/src/main/resources/application.properties
@@ -2,13 +2,20 @@
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
-## configure posrgres database connection details
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=password
+## configure postgres database connection details
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+
+
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/test
+spring.r2dbc.username=postgres
+spring.r2dbc.password=password
+spring.r2dbc.initialization-mode=always
+
 
 ## configure hibernate details
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=none
 
 ## configure flyway details
 spring.flyway.enabled=true
