--- a/example_microservices/spring_demo/src/main/resources/application.properties
+++ b/example_microservices/spring_demo/src/main/resources/application.properties
@@ -21,4 +21,4 @@ spring.r2dbc.initialization-mode=always
 spring.flyway.enabled=true
 spring.flyway.clean-on-validation-error=true
 
-
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
