--- a/strimzi-kafka/kafka-persistent-single.yaml
+++ b/strimzi-kafka/kafka-persistent-single.yaml
@@ -9,13 +9,16 @@ spec:
     listeners:
       plain: {}
       tls: {}
-      External:
-        Overrides:
-          Brokers:
-            Advertised Host:  172.28.33.50
-            Broker:           0
-        Tls:                  false
-        Type:                 nodeport
+      external:
+        tls: false
+        type: nodeport
+        overrides:
+          bootstrap:
+            nodePort: 32110
+          brokers:
+          - broker: 0
+            advertisedHost: 172.28.33.50
+            nodePort: 32100
     config:
       offsets.topic.replication.factor: 1
       transaction.state.log.replication.factor: 1
