new repo for consumer service

--- a/example_microservices/spring_consumer/src/main/resources/application.properties
+++ b/example_microservices/spring_consumer/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.hikari.maximumPoolSize=5
 #spring.datasource.password=password
 
 
-spring.r2dbc.url=r2dbc:postgresql://localhost:5432/postgres
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/public?schema=medication
 spring.r2dbc.username=postgress
 spring.r2dbc.password=password
 spring.r2dbc.initialization-mode=always
