--- a/example_microservices/spring_consumer/src/main/resources/application.properties
+++ b/example_microservices/spring_consumer/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
+server.port=8081
 
 ## configure postgres database connection details
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
