--- a/example_microservices/spring_functional/src/main/resources/application.properties
+++ b/example_microservices/spring_functional/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.flyway.enabled=true
 spring.flyway.clean-on-validation-error=true
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+disable SerializationFeature.FAIL_ON_EMPTY_BEANS
