--- a/example_microservices/spring_functional/src/main/resources/application.properties
+++ b/example_microservices/spring_functional/src/main/resources/application.properties
@@ -2,24 +2,21 @@
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
-## configure postgres database connection details
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=password
-
-
+## configure r2dbc driver connection details
 spring.r2dbc.url=r2dbc:postgresql://localhost:5432/postgres
 spring.r2dbc.username=postgress
 spring.r2dbc.password=password
 spring.r2dbc.initialization-mode=always
 
+## configure flyway migrations details
+spring.flyway.locations=classpath:db/migration
+flyway.url=jdbc:postgresql://localhost:5432/postgres
+flyway.user=postgres
+flyway.password=password
+spring.flyway.enabled=true
+spring.flyway.clean-on-validation-error=true
 
 ## configure hibernate details
 #spring.jpa.hibernate.ddl-auto=none
 
-## configure flyway details
-spring.flyway.enabled=true
-spring.flyway.clean-on-validation-error=true
-
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-disable SerializationFeature.FAIL_ON_EMPTY_BEANS
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=true
