--- a/example_microservices/spring_functional/src/main/resources/application.properties
+++ b/example_microservices/spring_functional/src/main/resources/application.properties
@@ -3,14 +3,14 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## configure r2dbc driver connection details
-spring.r2dbc.url=r2dbc:postgresql://localhost:5432/postgres
+spring.r2dbc.url=r2dbc:postgresql://172.28.33.50:5432/postgres
 spring.r2dbc.username=postgress
 spring.r2dbc.password=password
 spring.r2dbc.initialization-mode=always
 
 ## configure flyway migrations details
 spring.flyway.locations=classpath:db/migration
-flyway.url=jdbc:postgresql://localhost:5432/postgres
+flyway.url=jdbc:postgresql://172.28.33.50:5432/postgres
 flyway.user=postgres
 flyway.password=password
 spring.flyway.enabled=true
