--- a/example_microservices/demo_microservices/templates/debezium-service.yaml
+++ b/example_microservices/demo_microservices/templates/debezium-service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.postgres.name }}
+  name: {{ .Values.debezium.name }}
   labels:
     {{- include "demo_microservices.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.postgres.service.type }}
+  type: {{ .Values.debezium.service.type }}
   ports:
-    - port: {{ .Values.postgres.service.port }}
-      targetPort: http
+    - port: {{ .Values.debezium.service.port }}
+      targetPort: {{ .Values.debezium.service.port }}
       protocol: TCP
       name: http
   selector:
-    app: {{ .Values.postgres.name }}
+    app: {{ .Values.debezium.name }}
     {{- include "demo_microservices.selectorLabels" . | nindent 4 }}
