--- a/example_microservices/spring_functional/src/main/resources/flyway.properties
+++ b/example_microservices/spring_functional/src/main/resources/flyway.properties
@@ -2,7 +2,7 @@ flyway.user=postgres
 flyway.password=password
 #flyway.defaultSchema=public
 #flyway.schemas=public
-flyway.url=jdbc:postgresql://localhost:5432/postgres
+flyway.url=jdbc:postgresql://172.28.33.50:32650/postgres
 flyway.locations=classpath:db/migration
 flyway.cleanOnValidationError=true
 
