--- a/efk_stack/templates/apmServer-service.yaml
+++ b/efk_stack/templates/apmServer-service.yaml
@@ -10,6 +10,7 @@ spec:
   ports:
     - port: {{ .Values.apmServer.service.port }}
       targetPort: http
+      nodePort: {{ .Values.apmServer.service.nodePort }}
       protocol: TCP
       name: http
   selector:
