--- a/efk_stack/templates/fluentd-deployment.yaml
+++ b/efk_stack/templates/fluentd-deployment.yaml
@@ -19,6 +19,8 @@ spec:
         {{- include "oht-devops.selectorLabels" . | nindent 8 }}
     spec:
       serviceAccountName: {{ .Values.serviceAccounts.name }}
+      securityContext:
+        fsGroup: 0
       containers:
         - name: {{ .Values.fluentd.name  }}
           image: "{{ .Values.fluentd.image.repository }}:{{ .Values.fluentd.image.tag }}"
