--- a/efk_stack/templates/elasticsearch-deployment.yaml
+++ b/efk_stack/templates/elasticsearch-deployment.yaml
@@ -1,13 +1,21 @@
+{{ if eq .Values.environment "sandbox" }}
 apiVersion: apps/v1
+{{ if eq .Values.environment "local" }}
 kind: Deployment
+{{ else if eq .Values.environment "azure" }}
+kind: StatefulSet
+{{ end }}
 metadata:
   name: {{ .Values.elasticsearch.name }}
   labels:
     {{- include "oht-devops.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
-  strategy:
-    type: RollingUpdate
+{{ if eq .Values.environment "local" }}
+  replicas: 1
+{{ else if eq .Values.environment "azure" }}
+  serviceName: {{ .Values.elasticsearch.name }}
+  replicas: 3
+{{ end }}
   selector:
     matchLabels:
       app: {{ .Values.elasticsearch.name }}
@@ -19,6 +27,8 @@ spec:
         {{- include "oht-devops.selectorLabels" . | nindent 8 }}
     spec:
       serviceAccountName: {{ .Values.serviceAccounts.name }}
+      securityContext:
+        fsGroup: 0
       containers:
         - name: {{ .Values.elasticsearch.name  }}
           image: "{{ .Values.elasticsearch.image.repository }}:{{ .Values.elasticsearch.image.tag }}"
@@ -37,10 +47,14 @@ spec:
               #port: http
           resources:
             {{- toYaml .Values.elasticsearch.resources | nindent 12 }}
-          {{- if .Values.elasticsearch.singleNode }}
+          {{ if eq .Values.environment "local" }}
           env:
           - name: discovery.type
             value: single-node
+          #{{ else if eq .Values.environment "azure" }}
+          #env:
+          #- name: discovery.seed_hosts
+            #value: elasticsearch.default.svc
           {{- end}}
           volumeMounts:
           - name: elasticsearch-data
@@ -58,4 +72,12 @@ spec:
           items:
             - key: elasticsearch.yml
               path: elasticsearch.yml
-
+{{ if eq .Values.environment "azure" }}
+      initContainers:
+      - image: alpine:3.6
+        command: ["/sbin/sysctl", "-w", "vm.max_map_count=262144"]
+        name: elasticsearch-init
+        securityContext:
+          privileged: true
+{{ end }}
+{{ end }}
