--- a/efk_stack/templates/nginx_ingress_controller.yaml
+++ b/efk_stack/templates/nginx_ingress_controller.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.environment "sandbox" }}
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -292,3 +293,5 @@ spec:
       memory: 90Mi
       cpu: 100m
     type: Container
+
+{{ end }}
