--- a/efk_stack/templates/roleBinding.yaml
+++ b/efk_stack/templates/roleBinding.yaml
@@ -5,7 +5,11 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: view
+  name: {{ .Values.serviceAccounts.name }}
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.serviceAccounts.name }}
+
+
+
+
