--- a/example_microservices/nonreactive_example/patient-ms/src/main/resources/application.properties
+++ b/example_microservices/nonreactive_example/patient-ms/src/main/resources/application.properties
@@ -3,14 +3,14 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## configure jpa connection details
-spring.datasource.url=jdbc:postgresql://172.28.33.50:32650/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 ## configure flyway migrations details
 spring.flyway.locations=classpath:db/migration
-flyway.url=jdbc:postgresql://172.28.33.50:5432/postgres
+flyway.url=jdbc:postgresql://localhost:5432/postgres
 flyway.user=postgres
 flyway.password=password
 spring.flyway.enabled=true
