--- a/efk_stack/templates/fluentd-deployment.yaml
+++ b/efk_stack/templates/fluentd-deployment.yaml
@@ -20,6 +20,7 @@ spec:
     spec:
       serviceAccountName: {{ .Values.serviceAccounts.name }}
       securityContext:
+        runAsUser: 1000
         fsGroup: 0
       containers:
         - name: {{ .Values.fluentd.name  }}
