--- a/efk_stack/templates/elasticsearch_client-deployment.yaml
+++ b/efk_stack/templates/elasticsearch_client-deployment.yaml
@@ -38,9 +38,9 @@ spec:
         - name: discovery.seed_hosts
           value: "{{ .Values.elasticsearch.name }}-discovery.default.svc:9300,{{ .Values.elasticsearch.name }}-data.default.svc:9300,{{ .Values.elasticsearch.name }}-client.default.svc:9200"
         - name: NODE_MASTER
-          value: "false"
+          value: "true"
         - name: NODE_INGEST
-          value: "false"
+          value: "true"
         - name: NODE_DATA
           value: "false"
         - name: HTTP_ENABLE
