--- a/efk_stack/templates/elasticsearch_data-statefulset.yaml
+++ b/efk_stack/templates/elasticsearch_data-statefulset.yaml
@@ -40,7 +40,7 @@ spec:
         - name: discovery.seed_hosts
           value: "{{ .Values.elasticsearch.name }}-discovery.default.svc:9300,{{ .Values.elasticsearch.name }}-data.default.svc:9300,{{ .Values.elasticsearch.name }}-client.default.svc:9200"
         - name: NODE_MASTER
-          value: "false"
+          value: "true"
         - name: NODE_INGEST
           value: "false"
         - name: NODE_DATA
