--- a/example_microservices/nonreactive_example/patient-ms/pom.xml
+++ b/example_microservices/nonreactive_example/patient-ms/pom.xml
@@ -21,9 +21,55 @@
     <modelmapper.version>2.3.6</modelmapper.version>
     <mapstruct.version>1.3.1.Final</mapstruct.version>
     <spring-webmvc.version>5.2.4.RELEASE</spring-webmvc.version>
+    <ecs-logging-java.version>0.1.3</ecs-logging-java.version>
   </properties>
 
   <dependencies>
+
+<!--    Logging-->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.11.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.11.2</version>
+    </dependency>
+
+
+
+<!--    <dependency>-->
+<!--      <groupId>org.apache.logging.log4j</groupId>-->
+<!--      <artifactId>log4j-api</artifactId>-->
+<!--      <version>2.11.2</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.logging.log4j</groupId>-->
+<!--      <artifactId>log4j-core</artifactId>-->
+<!--      <version>2.11.2</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.logging.log4j</groupId>-->
+<!--      <artifactId>log4j-slf4j-impl</artifactId>-->
+<!--      <version>2.11.2</version>-->
+<!--    </dependency>-->
+<!--    Logging-->
+
+<!--    <dependency>-->
+<!--      <groupId>co.elastic.logging</groupId>-->
+<!--      <artifactId>log4j2-ecs-layout</artifactId>-->
+<!--      <version>${ecs-logging-java.version}</version>-->
+<!--    </dependency>-->
+
+    <dependency>
+      <groupId>co.elastic.logging</groupId>
+      <artifactId>logback-ecs-encoder</artifactId>
+      <version>${ecs-logging-java.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
